# zyplux-ai

./: .gitignore  .prettierignore  .rumdl.toml  MONOREPO.md  OVERVIEW.md  bunfig.toml  eslint.config.ts  justfile  knip.json  package.json  prettier.config.ts  pyproject.toml  pyrefly.toml  ruff.toml  tsconfig.json
.github/: CODEOWNERS  copilot-instructions.md  settings.yml
.github/workflows/: ci.yml  deploy.yml  org_gate.yml
apps/web/: agent.html  content-collections.ts  index.html  insights.html  og-image.html  package.json  privacy.html  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
apps/web/content/: site.yaml
apps/web/og/: fonts.ts  insights-frontmatter-plugin.ts  og-image-plugin.ts  og-image-plugin.tsx  posts.ts
apps/web/scripts/: render-og.ts
apps/web/seo/: seo-plugin.ts
apps/web/src/: App.tsx  agent.tsx  config.ts  content.ts  index.css  insights-frontmatter.d.ts  insights.tsx  main.tsx  mount.tsx  posts.ts  privacy.tsx  routeTree.gen.ts  seo.ts
docs/: post-new-content.md  roadmap.md  session.md
docs/old/: post-new-content.md
docs/old/lean-canvas/: lean-canvas-questionnaire.md
docs/roadmap/: left-to-do.md  messaging-expansion.md  tanstack-mdx-migration.md
docs/roadmap/done/: tanstack-mdx-migration.md
docs/wiki/lean-canvas/: lean-canvas-guide.md
patches/: miniflare@4.20260609.0.patch  miniflare@4.20260616.0.patch
scripts/: clone_reference.py
tests/: bunfig.toml  package.json  test_ci_pipeline.py  tsconfig.json  vitest.config.ts
tests/src/: style.test.ts  tokens.test.ts  utils.test.ts
tests/src/stories/: seo.ts  (+3 more)
(+69 files in other folders)
