[project]
name = "zyplux-ai"
version = "0"
description = "zyplux-ai — virtual workspace root (Python tooling only, no Python packages)"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
testpaths = ["scripts"]

[tool.coverage.report]
fail_under = 90

[tool.vulture]
paths = ["scripts"]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "vulture>=2.16",
    "zyplux-cerberus>=0.8.0",
]
test = [
    "pytest>=9.1.1",
]
type = [
    "pyrefly>=1.1.1",
]
